--- a/compose_local/Dockerfile
+++ b/compose_local/Dockerfile
@@ -1,37 +1,34 @@
-# ベースイメージ
-FROM python:3.12-slim
+# syntax=docker/dockerfile:1.4
 
-# 作業ディレクトリ
-WORKDIR /app
+FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim AS base
 
-# 環境変数
-ENV PYTHONDONTWRITEBYTECODE=1 \
+ENV DEBIAN_FRONTEND=noninteractive \
     PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    UV_COMPILE_BYTECODE=1 \
+    UV_LINK_MODE=copy \
+    UV_PYTHON_PREFERENCE=system \
     PORT=8765
 
-# システム依存パッケージ（必要最小限）
+# 必要最小限のパッケージ
 RUN apt-get update && apt-get install -y --no-install-recommends \
     curl \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# uv をインストール
-COPY --from=ghcr.io/astral-sh/uv:latest /uv /usr/local/bin/uv
+WORKDIR /app
 
-# 依存関係ファイルをコピー
+# 依存関係をコピー＆インストール
 COPY pyproject.toml uv.lock* ./
-
-# 依存関係をインストール
 RUN uv sync --frozen --no-dev --no-cache
 
-# アプリケーションコードをコピー
+# アプリケーションコード
 COPY youtube_caption_api.py ./
 
 # ヘルスチェック
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:${PORT}/health || exit 1
 
-# ポート公開
 EXPOSE ${PORT}
 
-# 起動コマンド
 CMD ["sh", "-c", "uv run uvicorn youtube_caption_api:app --host 0.0.0.0 --port ${PORT}"]
