--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "uvicorn>=0.32.0",
     "youtube-transcript-api>=0.6.0",
     "requests>=2.32.0",
+    "python-dotenv>=1.0.0",
 ]
 
 [project.optional-dependencies]
